force-app/main/default/objects/BankCard__c/BankCard__c.object-meta.xml
<CustomObject>
    <label>Bank Card</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>BankCard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>