force-app/main/default/objects/BankCard__c/fields/BankEmitter__c.field-meta.xml
<CustomField>
    <fullName>BankEmitter__c</fullName>
    <defaultValue>&#39;U.S. Bank&#39;</defaultValue>
    <label>Bank Emitter</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>