force-app/main/default/objects/BankCard__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <length>25</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>