force-app/main/default/objects/BankCard__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>Owner</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Bank Cards</relationshipLabel>
    <relationshipName>BankCards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>