force-app/main/default/objects/BankCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number__c</columns>
    <columns>BankEmitter__c</columns>
    <columns>OwnerId__c</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>